<resources>
    <string name="app_name">Stories</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_story">StoryActivity</string>
    <string name="dummy_content">dummy\ncontent</string>
    <string name="ok">OK</string>
    <string name="interpretation_exception_title">Interpretation exception</string>
    <string name="interpretation_exception_text">Something has gone bad while interpreting the book. If you\'re the book\'s creator, check your syntax.</string>
    <string name="execution_exception_title">Execution exception</string>
    <string name="execution_exception_text">Oops, something\'s gone wrong while executing the book. If you\'re the book\'s creator, check your code.</string>
    <string name="loading_exception_title">Loading exception</string>
    <string name="loading_exception_text">Oops, something\'s gone wrong while loading the book. If you\'re the book\'s creator, check your files.</string>
    <string name="unknown_exception_title">Unknown exception</string>
    <string name="unknown_exception_text">Something has gone wrong while executing the book :/</string>
    <string name="desc_story_background">Background</string>
    <string name="the_end">The end</string>
    <string name="input">Input</string>
    <string name="initial_character_name">Character\'s name</string>
    <string name="initial_story_text"><![CDATA[Your story\'s narrative & speech go here]]></string>
    <string name="initial_answer_text">Answers to the question</string>
    <string name="new_book">New book</string>
    <string name="new_book_title">Pick a working title for your new book</string>
    <string name="create">Create</string>
    <string name="edit_book">Edit book</string>
    <string name="add_chapter_title">Add a chapter</string>
    <string name="add_chapter_text">Enter new chapter\'s title</string>
    <string name="add">Add</string>
    <string name="ioex_dialog_title">I/O exception</string>
    <string name="ioex_dialog_text">Unknown exception occurred while reading from or writing to file</string>
    <string name="ppex_dialog_title">Preprocessing Exception</string>
    <string name="ppex_dialog_text">Something unexpected happened during preprocessing source files. If you\'re developing the book, check if all included files are present.</string>
    <string name="choose_avatar">Choose avatar using…</string>
    <string name="choose_background">Choose background using…</string>
    <string name="make_question_var_title">Insert question name</string>
    <string name="make_question_var_text">Pick a unique name which you can easily associate with this question. You will use this name to refer to this question later. What is this question about?</string>
    <string name="cancel">Cancel</string>
    <string name="make_question_var_example">e.g. favouriteColor, petName, bestFriend</string>
    <string name="dialog_addbranch_title">Add a condition</string>
    <string name="dialog_addbranch_text">Create a new condition. Pick a variable, operator and either variable or value to which it should be equal, unequal, less or greater than</string>
    <string name="make_question_desc">Make a question</string>
    <string name="story_editor_next_desc">Next scene</string>
    <string name="story_editor_prev_desc">Previous scene</string>
    <string name="story_editor_add_desc">Add a scene before this one</string>
    <string name="story_editor_changebg_desc">Change background</string>
    <string name="story_editor_restart_desc">Reset scene</string>
    <string name="story_editor_code_desc">Manage code</string>
    <string name="story_editor_branching_desc">Show conditions</string>
    <string name="story_editor_add_branch_desc">Add a condition</string>
    <string name="set_variable">Set variable</string>
    <string name="add_label">Add label before this scene</string>
    <string name="add_jump">Jump to label after this scene</string>
    <string name="add_custom_statement">Add custom statement before this scene</string>
    <string name="dialog_add_label_title">Add a label</string>
    <string name="dialog_add_label_text">Mark this statement with a label, so you can jump to it later. Pick a name for the new label:</string>
    <string name="dialog_add_label_hint">e.g. initialScene, importantChoice, epilogue</string>
    <string name="dialog_add_jump_title">Add a jump</string>
    <string name="dialog_add_jump_text">After this scene, move to the scene which is marked by label. Combine this with conditions (branches) to create conditional jumps which allow you to jump around the story. Enter label to jump to:</string>
    <string name="dialog_add_statement_title">Add a custom statement</string>
    <string name="dialog_add_statement_text">Add a custom statement which will be inserted before this scene with same indentation. Preceding colon will be automatically added. Remember to follow the syntactic rules!</string>
    <string name="dialog_add_statement_hint"><![CDATA[e.g. myVar=something+3, >>procedure]]></string>
    <string name="dialog_setvar_text">Set an existing, or add a new variable. Values can be strings, numbers and basic operations on them. For concatenating strings, use + operator.</string>
    <string name="dialog_setvar_title">Set a variable</string>
    <string name="set">Set</string>
    <string name="dialog_setvar_variable_hint">Variable name</string>
    <string name="dialog_setvar_value_hint">Value or expression</string>
    <string name="story_editor_save_desc"><![CDATA[Save & compile]]></string>
    <string name="story_editor_confirm_exit_title">Confirm exit</string>
    <string name="story_editor_confirm_exit_text">You have some unsaved changes. If you exit now, you will lose them. Are you sure?</string>
    <string name="exit">Exit</string>
    <string name="stay">Stay</string>
    <string name="saved">Saved!</string>
    <string name="end_of_chapter">The end of chapter %s</string>
    <string name="story_editor_input_desc">This is an INPUT line; user\'s input is stored in variable %s</string>
    <string name="story_editor_endchapter_desc">This statement terminates the current chapter</string>
    <string name="story_editor_delete_desc">Delete scene</string>
    <string name="story_editor_avatar_desc">Character\'s image</string>
    <string name="story_editor_no_questionvar_title">No question variable chosen</string>
    <string name="story_editor_no_questionvar_text">No variable for the question has been chosen. Randomly assigned variable is %s. You can change this by restarting the scene.</string>
    <string name="story_editor_add_input">Ask user for input</string>
    <string name="dialog_addinput_text">Create an input dialog. When your story reaches this line, user will be asked to enter some text which will be stored to a variable. This will replace the current line. Enter variable name and hint to the user:</string>
    <string name="dialog_addinput_variable_hint">e.g. username, favouriteColor</string>
    <string name="dialog_addinput_hint_hint">e.g. Enter your favourite color, such as purple</string>
    <string name="dialog_addinput_title">Add user input</string>
    <string name="explain_perm_storage_title">Insufficient permissions</string>
    <string name="explain_perm_storage_text">This app needs storage permission in order to load books from storage. Please allow the app to use local storage.</string>
    <string name="tab_downloaded_books">Downloaded</string>
    <string name="tab_my_books">My books</string>
    <string name="publish_book">Publish…</string>
    <string name="fork_book">Copy to My Books</string>
    <string name="remove_book">Remove book</string>
    <string name="remove_from_my_books">Remove from My Books</string>
    <string name="confirm_remove_book_title">Remove book?</string>
    <string name="confirm_remove_book_text">Are you sure you want to permanently remove this book from your device? This action is non-reversible.</string>
    <string name="remove">Remove</string>
    <string name="error_default_bad_request">Error: 400 Bad request. Please report this.</string>
    <string name="error_default_unauthorized">Error: 401 unauthorized. Please report this.</string>
    <string name="error_default_ok">200 OK, everything seems OK. Please tell me if you ever see this.</string>
    <string name="error_default_created">201 Created, everything seems OK. Please tell me if you ever see this.</string>
    <string name="error_default_forbidden">Error: 403 Forbidden. Please report this.</string>
    <string name="error_default_not_found">Error: 404 Not found. Please report this.</string>
    <string name="error_default_conflict">Error: 409 Conflict. Please report this.</string>
    <string name="error_default_gone">Error: 410 Gone. Please report this.</string>
    <string name="error_default_server_error">Error: 500 Server error. Please report this.</string>
    <string name="error_default_unknown">Something has gone really wrong. You shouldn\'t see this, but if you do, please tell me.</string>
    <string name="wrong_creds">Username or password don\'t match. Please check, then try again</string>
    <string name="wrong_creds_title">Login unsuccessful</string>
    <string name="error_session_expired_title">Session Expired</string>
    <string name="error_session_expired_text">Please log in again</string>
    <string name="error_insufficient_permissions_title">Insufficient permissions</string>
    <string name="error_insufficient_permissions_text">You aren\'t trying to do something you know you can\'t, are you? If you don\'t know what\'s going on, please report this.</string>
    <string name="error_server_error_title">Server error</string>
    <string name="error_server_error_text">Server is reporting an unknown error. Please report this.</string>
    <string name="error_not_found_title">Not found</string>
    <string name="error_not_found_text">Server says it can\'t find what I am looking for, which is weird. Please report this.</string>
    <string name="error_duplicate_title">Duplicate</string>
    <string name="error_duplicate_text">Server complains about a duplicate. If you don\'t know what\'s going on, please report this.</string>
    <string name="error_bad_request_title">Bad request</string>
    <string name="error_bad_request_text">Server says it can\'t understand me, which is weird. Please report this.</string>
    <string name="error_json_title">JSON error</string>
    <string name="error_json_text">Server is drunk (or I messed up something badly). Please report this.</string>
    <string name="error_offline_title">You\'re offline</string>
    <string name="error_offline_text">That means you won\'t see any new changes, though you can still browse any data you have already seen</string>
    <string name="error_changed_offline_title">You have gone offline</string>
    <string name="error_changed_offline_text">This means you won\'t be able to add new stuff or refresh until you reconnect</string>
    <string name="error_socketex_title">Network exception</string>
    <string name="error_socketex_text">Something is wrong with the network, or the server is unavailable. Please report this.</string>
    <string name="error_fileex_title">File exception</string>
    <string name="login">Login</string>
    <string name="details_title">Title</string>
    <string name="details_genres">Genres</string>
    <string name="details_author">Author</string>
    <string name="details_date_published">Date published</string>
    <string name="details_rating">Rating</string>
    <string name="details_description">Description</string>
    <string name="my_account">My account</string>
    <string name="reading_history">Reading history</string>
    <string name="logout">Log out</string>
    <string name="my_published_books">My published books</string>
    <string name="action_disable_onboarding">Disable tutorial</string>
    <string name="action_enable_onboarding">Enable tutorial</string>
</resources>