<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="rs.lukaj.android.stories.ui.MainActivity">
    <item
        android:id="@+id/menu_item_login"
        android:title="@string/login"
        android:icon="@drawable/ic_login_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_user_details"
        android:title="@string/my_account"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_reading_history"
        android:title="@string/reading_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_my_published_books"
        android:title="@string/my_published_books"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_disable_onboarding"
        android:title="@string/action_disable_onboarding"
        app:showAsAction="never"/>
    <item android:id="@+id/menu_item_enable_onboarding"
          android:title="@string/action_enable_onboarding"
          app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_logout"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
