<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dialog_padding"
    android:paddingRight="@dimen/dialog_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_setvar_text"
        android:layout_marginBottom="@dimen/dialog_text_bot_margin"/>

    <AutoCompleteTextView
        android:id="@+id/dialog_setvar_variable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="2"
        android:hint="@string/dialog_setvar_variable_hint"/>

    <TextView
        android:id="@+id/dialog_setvar_op"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="="
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"/>

    <EditText
        android:id="@+id/dialog_setvar_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/dialog_setvar_value_hint"/>
</LinearLayout>